--- a/.github/workflow/test.yml
+++ b/.github/workflow/test.yml
@@ -2,22 +2,22 @@ name: CI Workflow
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'temurin'
+        distribution: temurin
     - name: Build Maven
       run: mvn clean install
     - name: Test
-      run: mvn test -DskipTests-false
+      run: mvn test -DskipTests=false
