--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>assignment1</artifactId>
+	<artifactId>webapp/artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>assignment1</name>
+	<name>webapp</name>
 	<description>assignment1</description>
 	<properties>
 		<java.version>17</java.version>
