--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/userInfo
+spring.datasource.url=jdbc:mysql://localhost:3306/webappdb
 spring.datasource.username=root
 spring.datasource.password= Mac_2199!
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-server.port=8082
+server.port=5050
 
